# vibe-dictate

./: .env.vibevoice-gb10.example  .env.vibevoice.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.build  Dockerfile.vibevoice-gb10  README.md  build.rs  docker-compose-vibedictate-build.yml  docker-compose-vibevoice-asr-gb10.yml  docker-compose-vibevoice.yml  setup_vibevoice.bat  setup_vibevoice.sh
.github/: FUNDING.yml
scripts/: openai_asr_entrypoint.sh  openai_asr_server.py  setup_vibevoice.sh  vibevoice_entrypoint.sh
src/: audio.rs  autostart.rs  config.rs  gradio.rs  hotkey_capture.rs  injector.rs  keystroke.rs  main.rs  mouse_hook.rs  openai.rs  singleton.rs  text_input.rs  tray.rs  vad.rs
vibevoice-lab/: .env.example  Dockerfile.vibevoice-gb10  README.md  docker-compose.yml  setup_lab.sh
