[package]
name = "vibe-dictate"
version = "0.1.0"
edition = "2021"
description = "Windows push-to-talk dictation tool for local VibeVoice ASR"
license = "MIT"
publish = false

[[bin]]
name = "vibe-dictate"
path = "src/main.rs"

[dependencies]
# Event loop, tray, global hotkeys (Tauri team crates)
tao = "0.30"
tray-icon = "0.19"
global-hotkey = "0.6"

# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }

# Audio capture (WASAPI via cpal)
cpal = "0.15"

# WAV encoding
hound = "3.5"

# HTTP client with multipart + blocking
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "multipart",
    "json",
    "rustls-tls",
    "stream",
] }

# Clipboard + keyboard output
arboard = "3.4"

# Config serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories-next = "2.0"

# Autostart registry
winreg = "0.52"

# Logging
log = "0.4"
env_logger = "0.11"

# Misc
anyhow = "1.0"
once_cell = "1.20"
crossbeam-channel = "0.5"

[build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

# icon embedded via build.rs + embed-resource
